# tender_skills

./: .env.example  .gitignore  README.md  pyproject.toml
tests/: conftest.py
viewer/: README.md  pyproject.toml
viewer/tests/: conftest.py
viewer/tests/api/: test_app_boot.py  test_content_api.py  test_document_assets_api.py  test_gen_catalog_api.py  test_interpret_api.py  test_sessions_api.py  test_workspaces_api.py
viewer/tests/integration/: test_interpret_dual_file.py  test_interpret_single_file.py  test_reextract.py  test_upload_pipeline.py
viewer/tests/unit/: test_asset_navigation.py  test_config.py  test_gen_catalog_pipeline.py  test_gen_catalog_static_assets.py  test_index_static_assets.py  test_interpret_inputs.py  test_interpret_pipeline.py  test_interpret_session_store.py  test_interpret_static_assets.py  test_job_registry.py  test_outline_tree.py  test_pipeline_service.py  test_section_slice.py  test_session_cleanup.py  test_session_store.py  test_session_sync.py  test_workspace.py  test_workspace_merge.py  test_workspace_merge_compat.py
viewer/viewer/: __main__.py  config.py  deps.py  main.py  models.py
viewer/viewer/routes/: content.py  gen_catalog.py  interpret.py  jobs.py  sessions.py  upload.py  workspaces.py
viewer/viewer/services/: asset_navigation.py  gen_catalog_pipeline.py  interpret_inputs.py  interpret_job_registry.py  interpret_pipeline.py  interpret_session_store.py  job_registry.py  outline_tree.py  pipeline.py  reextract.py  section_slice.py  session_cleanup.py  session_store.py  session_sync.py  workspace.py  workspace_merge.py
(+325 files in other folders)
